# archive-pyvider-hcl

./: .act-env  .act-platforms  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile.backup.20251110  README.md  env.ps1  env.sh  mkdocs.yml  mutmut-results.txt  pyproject.toml  wrknv.toml
.claude/: settings.local.json
.github/workflows/: .trigger  .trigger2  .trigger3  .trigger4  .trigger5  ci.yml  main.yml  release.yml  trigger.txt
docs/: architecture.md  getting-started.md  guide.md  index.md
docs/archive/: GEMINI.md
docs/getting-started/: installation.md
docs/guides/: error-handling.md  parsing.md  schema-validation.md  terraform-integration.md  testing.md  type-inference.md
docs/reference/: index.md
docs/reference/pyvider/: index.md
docs/reference/pyvider/hcl/: exceptions.md  index.md
docs/reference/pyvider/hcl/factories/: index.md  resources.md  types.md  variables.md
docs/reference/pyvider/hcl/output/: formatting.md  index.md
docs/reference/pyvider/hcl/parser/: base.md  context.md  index.md  inference.md
docs/reference/pyvider/hcl/terraform/: config.md  index.md
examples/: 01_basic_parsing.py  02_schema_validation.py  03_type_inference.py  04_terraform_variables.py  05_terraform_resources.py  06_complex_structures.py  07_error_handling.py  08_multi_file_project.py  README.md
mutants/: mutmut-stats.json  pyproject.toml
mutants/src/pyvider/: __init__.py
mutants/src/pyvider/hcl/: __init__.py  _version.py  exceptions.py
mutants/src/pyvider/hcl/factories/: __init__.py  resources.py  types.py  variables.py
mutants/src/pyvider/hcl/output/: __init__.py  formatting.py
mutants/src/pyvider/hcl/parser/: __init__.py  base.py  context.py  inference.py
mutants/src/pyvider/hcl/terraform/: __init__.py  config.py
mutants/tests/: conftest.py  test_integration.py
mutants/tests/factories/: __init__.py  test_factories.py
mutants/tests/output/: test_printer.py
mutants/tests/parser/: test_parser.py
mutants/tests/parser/fixtures/: list_of_nested_objects_valid.hcl  nested_object_invalid_type.hcl  simple_valid.hcl  string_value.hcl  tuple_like_list_invalid_length.hcl  tuple_like_list_invalid_type.hcl  tuple_like_list_valid.hcl
mutants/tests/terraform/: test_terraform.py
src/pyvider/: __init__.py
src/pyvider/hcl/: __init__.py  exceptions.py
src/pyvider/hcl/factories/: __init__.py  resources.py  types.py  variables.py
src/pyvider/hcl/output/: __init__.py  formatting.py
src/pyvider/hcl/parser/: __init__.py  base.py  context.py  inference.py
src/pyvider/hcl/terraform/: __init__.py  config.py
tests/: test_property_based.py
tests/factories/: test_factories.py
tests/output/: __init__.py  test_printer.py
tests/parser/: test_parser.py  test_unknown_type_isolation.py
tests/parser/fixtures/: invalid_syntax.hcl  list_of_nested_objects_invalid.hcl  nested_object_valid.hcl  object_for_string_schema.hcl  object_valid.hcl
